@@ -1,3 +1,7 @@
+2012-05-12  6.7.6-10 Cristy  <quetzlzacatenango@image...>
+  * GravityType argument no longer ignored in Magick::Image::extent (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21000).
+
 2011-02-12  6.6.7-7 Cristy  <quetzlzacatenango@image...>
   * Add support for the strip() and stripImage() STL methods.
 
